# weekend-tracer

./: Cargo.toml
src/: camera.rs  image.rs  main.rs  objects.rs  random.rs  ray.rs  raytracer.rs  vec.rs  vectors.rs
src/tests/: mod.rs  vec_rotations.rs
